# cmd/api/main.go
@@ -11,6 +11,7 @@ import (
 	"time"
 
 	"github.com/luqmanulhakimdev/payment-gateway/internal/application"
+	"github.com/luqmanulhakimdev/payment-gateway/internal/infrastructure/mockprovider"
 	"github.com/luqmanulhakimdev/payment-gateway/internal/infrastructure/postgres"
 	httpapi "github.com/luqmanulhakimdev/payment-gateway/internal/interfaces/http"
 )
@@ -38,8 +39,9 @@ func run() error {
 		addr = ":8081"
 	}
 	createIntent := application.NewCreateIntent(postgres.NewIntentStore(pool))
+	createRefund := application.NewCreateRefund(postgres.NewRefundStore(pool), mockprovider.New())
 	authenticator := postgres.NewMerchantAuthenticator(pool)
-	server := &http.Server{Addr: addr, Handler: httpapi.NewRouter(pool.Ping, createIntent, authenticator), ReadHeaderTimeout: 5 * time.Second}
+	server := &http.Server{Addr: addr, Handler: httpapi.NewRouter(pool.Ping, createIntent, authenticator, createRefund), ReadHeaderTimeout: 5 * time.Second}
 	shutdownCtx, stop := signal.NotifyContext(context.Background(), os.Interrupt, syscall.SIGTERM)
 	defer stop()
 	go func() {
